# YAAD

./: CMakeLists.txt  FRC_QUICKSTART.md  README.md
backup/include/: capture.hpp  coordinateChanger.hpp  tagAngleCalculator.hpp
backup/src/pipeline/: cameraPoseEstimator.cpp  capture.cpp  coordinateChanger.cpp  fiducialDetector.cpp  poseEstimator.cpp  tagAngleCalculator.cpp
include/: cameraCalibration.hpp  cameraPoseEstimator.hpp  capture.hpp  configManager.hpp  coordinateChanger.hpp  fiducialDetector.hpp  kalmanFilter.hpp  mjpegStreamer.hpp  multiCameraManager.hpp  networkTablesPublisher.hpp  performanceMonitor.hpp  poseEstimator.hpp  webServer.hpp
include/config/: dataTypes.hpp
include/filter/: cameraFusion.hpp
include/pipeline/: fiducialDetector.hpp  multiCameraManager.hpp  poseEstimator.hpp  tagAngleCalculator.hpp
include/util/: logger.hpp  networkStreamer.hpp  networkTablesPublisher.hpp  visualizationUtils.hpp
src/: main.cpp
src/config/: calibration.json  cameraCalibration.cpp  config.json  configManager.cpp  dataTypes.hpp
src/filter/: cameraFusion.cpp  kalmanFilter.cpp
src/pipeline/: cameraPoseEstimator.cpp  capture.cpp  coordinateChanger.cpp  fiducialDetector.cpp  multiCameraManager.cpp  poseEstimator.cpp  tagAngleCalculator.cpp
src/util/: logger.cpp  mjpegStreamer.cpp  networkStreamer.cpp  networkTablesPublisher.cpp  performanceMonitor.cpp  visualizationUtils.cpp  webServer.cpp
